syntax = "proto3";

package com.sanghoon.jvm_jst.rds.proto;

option java_multiple_files = true;
option java_outer_classname = "PnuH3Proto";

// H3 인덱스별 PNU Set (중복 없음)
message PnuSetProto {
  repeated string pnus = 1;
}
